--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
+aniso8601==8.0.0
+attrs==19.3.0
 bson==0.5.8
+click==7.1.2
+colorama==0.4.3
 Flask==1.1.1
-flask-cors==3.0.8
+Flask-Cors==3.0.8
 flask-marshmallow==0.10.1
-flask_restplus==0.13.0
+flask-restplus==0.13.0
+importlib-metadata==1.7.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonschema==3.2.0
 logzero==1.5.0
+MarkupSafe==1.1.1
 marshmallow==2.20.2
 mongomock==3.17.0
+pika==0.13.1
 pymongo==3.8.0
+pyrsistent==0.16.0
+python-dateutil==2.8.1
 python-dotenv==0.10.3
+pytz==2020.1
+sentinels==1.0.0
+six==1.15.0
 Werkzeug==0.16.1
+zipp==3.1.0
